Bug 157944 - To-dos ending at 00:00 are not displayed in the calendar
Summary: To-dos ending at 00:00 are not displayed in the calendar
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: triaged
Depends on:
Blocks:
 
Reported: 2008-02-16 23:13 UTC by Bartemius Crouch
Modified: 2009-03-02 00:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bartemius Crouch 2008-02-16 23:13:33 UTC
Version:            (using KDE 3.5.8)
Installed from:    Ubuntu Packages
OS:                Linux

When a To-Do task is added in kcalendar ending at 00:00 (i.e. the default 'due time'), the task is not visible in the calendar itself, although it is visble in the To-Do list. On the other hand, events ending at 00:00 are visible in the calendar. To-Do tasks ending at any other time that is not 00:00 (e.g. 00:01, 23:00, 01:00, etc.) are also visible in the calendar.
Comment 1 Michael Leupold 2008-09-28 17:39:13 UTC
I can no longer reproduce this in trunk r865573.
Comment 2 Michael Leupold 2008-09-28 17:41:36 UTC
Well, I'll have to revoke my previous comment. Somehow on switching days and/or views the To-do disappeared from my calendar as well. So this bug is still valid.
Comment 3 Sergio Martins 2009-01-27 02:51:44 UTC
I tried this and it doesn't dissapper, it shows at 23h45, I think that's why Michael didn't see it.

Can you scroll down and see if it's there?
Comment 4 Sergio Martins 2009-03-02 00:39:22 UTC
SVN commit 933937 by smartins:

A to-do is always 30 minutes tall, with endY at dtDue() and startY 30m before dtDue(), but if dtDue() was for example 00:20 then 
startY would be displayed at 23h50 (and endY also at 23h50 because endY can't be smaller)

BUG: 157944



 M  +9 -2      koagendaview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=933937