A to-do is always 30 minutes tall, with endY at dtDue() and startY 30m before dtDue(), but if dtDue() was for example 00:20 then startY would be displayed at 23h50 (and endY also at 23h50 because endY can't be smaller)

BUG: 157944


svn path=/trunk/KDE/kdepim/; revision=933937